[tool.poetry]
name = "animation"
version = "0.1.0"
description = ""
authors = ["Felix Wang <wangzimingwzm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
manim = "^0.17.3"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
